<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroceryStoreActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90b9c3">


        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#4db2c4"
            android:padding="0dp"
            android:weightSum="3"
            android:layout_gravity="center"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="Sign Out"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:layout_weight="0.4"
                android:textColor="@android:color/white"
                android:layout_margin="0dp" />

            <TextView
                android:id="@+id/grocery_store_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/_grocery_store_title_text"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:textStyle="bold"
                android:layout_weight="2.2"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_margin="0dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:layout_weight="0.4"
                android:textColor="@android:color/white"
                android:clickable="false"
                android:layout_margin="0dp"
                />
        </LinearLayout>

        <ScrollView
            android:id="@+id/discount_scroll_view_store"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/discount_input_layout"
            android:layout_below="@+id/topLayout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="-28dp"
            android:layout_marginBottom="-58dp">

            <LinearLayout
                android:id="@+id/discount_list_layout_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical" />
        </ScrollView>

    <LinearLayout
        android:id="@+id/discount_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_alignParentBottom="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredient_input_layout"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ingredient"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_input_layout"
            android:layout_width="80dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="price"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/post_button_grocery_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4db2c4"
            android:textColor="@android:color/white"
            android:text="@string/post_button_text" />

        <Button
            android:id="@+id/delete_button_grocery_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4db2c4"
            android:textColor="@android:color/white"
            android:text="@string/delete_button_text" />

    </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>